syntax = "proto3";

package api;
option csharp_namespace = "API.Interfaces";

import "location.proto";

service InfMapping {
  rpc Search (stream SearchRequest) returns (stream SearchResponse) {}
}

message SearchRequest {
    enum MapItemType {
        offer = 0;
        user = 1;
    }

    repeated MapItemType itemTypes = 1;
    int32 mapLevel = 2;
    GeoPointDto northWest = 3;
    GeoPointDto southEast = 4;

    // Other stuff we can filter by
}

message SearchResponse {
    repeated MapItemDto mapItems = 1;
}

message MapItemDto {
    enum MapItemStatus {
        inactive = 0;
        active = 1;
    }

    GeoPointDto geoPoint = 1;
    MapItemStatus status = 2;
    string parentClusterId = 3;

    oneof payload {
        OfferMapItemDto offer = 4;
        UserMapItemDto user = 5;
        ClusterMapItemDto cluster = 6;
    }
}

message OfferMapItemDto {
    string offerId = 1;
    string userId = 2;
}

message UserMapItemDto {
    string userId = 1;
}

message ClusterMapItemDto {
    string clusterId = 1;
    int32 itemCount = 2;
}